--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "@opencloud-eu/eslint-config": "^4.0.0",
-    "@opencloud-eu/extension-sdk": "^4.0.0",
     "@opencloud-eu/prettier-config": "^4.0.0",
     "@opencloud-eu/tsconfig": "^4.0.0",
     "@opencloud-eu/web-client": "^4.0.0",
@@ -28,6 +27,7 @@
     "eslint": "^9.22.0",
     "happy-dom": "^19.0.0",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "vite": "^7.0.0",
@@ -36,6 +36,9 @@
     "vue-router": "^4.5.0",
     "vue-tsc": "^3.0.0",
     "vue3-gettext": "^2.4.0"
+  },
+  "dependencies": {
+    "@opencloud-eu/extension-sdk": "^4.1.0-alpha.2"
   },
   "packageManager": "pnpm@10.17.1"
 }
