chore: configure renovate to only care about major version bumps
Since we work with version ranges and this package is for developers who will run `pnpm install` anyway, it is sufficient to only care about major version bumps.

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,10 +6,12 @@
   "labels": ["Type:Dependencies"],
   "packageRules": [
     {
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["patch", "minor"],
-      "groupName": "devDependencies (non-major)",
-      "groupSlug": "dev-dependencies"
+      "updateTypes": ["major"],
+      "automerge": false
+    },
+    {
+      "updateTypes": ["minor", "patch"],
+      "enabled": false
     }
   ]
 }
